fix z-index

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -6,6 +6,7 @@
   position: fixed;
   background-color: white;
   padding: 10px 30px;
+  z-index: 555;
   &__logo {
     width: 90px;
     height: 35px;
